tests/palaiologos/fail/integer_bounds/-2^32+1/sto_both.asm
sto -0ffffffffh, -0ffffffffh
